cluster/apps/harbor-system/harbor/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`registry.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: harbor-portal
          port: 80
      # middlewares:
      #   - name: default-headers
    - match: Host(`registry.${SECRET_DOMAIN_0}`) && (PathPrefix(`/api/`) || PathPrefix(`/service/`) || PathPrefix(`/v2/`) || PathPrefix(`/chartrepo/`) || PathPrefix(`/c/`))
      kind: Rule
      services:
        - name: harbor-core
          port: 80
  tls: {}
